gcc/testsuite/rust/compile/raw_identifiers_underscore.rs
pub fn s(num: i32) -> i32 {
    r#_ * num /* { dg-error "not a valid raw identifier" } */
}
